tree-sitter-M/test/corpus/string.txt
==================
String
==================
w "string"
w "this is ""one"" string"
w """this is also one string"""
---

(source_file
  (line (command (commandArg (string))))
  (line (command (commandArg (string))))
  (line (command (commandArg (string))))
  )
